syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "UpdatesService.Grpc";

// The service for getting updates on music releases.
service UpdatesService {
  // Returns new music releases for requested user.
  rpc GetNewReleases (NewReleasesRequest) returns (NewReleasesResponse);
}

// The request message containing the user's id.
message NewReleasesRequest {
  string user_id = 1;
}

// The response data for music release.
message MusicRelease {
  string id = 1;
  int32 year = 2;
  string title = 3;
}

// The response message containing the new releases for the user.
message NewReleasesResponse {
  repeated MusicRelease new_releases = 1;
}

// The service for getting application diagnostics.
service UpdatesDiagnosticsService {
	// Returns application diagnostics.
	rpc GetDiagnostics (google.protobuf.Empty) returns (UpdatesDiagnosticsResponse);
}

// The response message containing the application diagnostics.
message UpdatesDiagnosticsResponse {
	string version = 1;
}
